src/test/ui/issues/20000-29999/issue-20939.rs
trait Foo {}

impl<'a> Foo for dyn Foo + 'a {}
//~^ ERROR the object type `(dyn Foo + 'a)` automatically implements the trait `Foo`

fn main() {}
